--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,9 @@
 
 .header {
   grid-area: header;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #FF894F;
 }
 
