--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .container {
   display: grid;
+  justify-content: center;
   height: 100vh;
   grid-template-columns: 200px 1fr;
   grid-template-rows: 65px 1fr 65px;
@@ -9,9 +10,18 @@
     "footer footer";
 }
 
+.logo-placeholder {
+  height: 125px; /* Adjust as needed */
+}
+
 .menu {
   grid-area: menu;
   background-color: #FFA372;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  gap: 10px;
 }
 
 .header {
