--- a/src/App.css
+++ b/src/App.css
@@ -10,8 +10,17 @@
     "footer footer";
 }
 
+a {
+  text-decoration: none;
+}
+
 .logo-placeholder {
-  height: 125px; /* Adjust as needed */
+  height: 125px;
+}
+
+.logo-placeholder img {
+  width: 125px;
+  height: auto;
 }
 
 .menu {
@@ -20,7 +29,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
   gap: 10px;
 }
 
