--- a/src/components/MenuButtons.css
+++ b/src/components/MenuButtons.css
@@ -4,7 +4,7 @@
   flex-shrink: 0;
   border-radius: 10px;
   border: 1px solid #000;
-  background: #FFF;
+  background: #e5e5e5;
   color: black;
   font-weight: 600;
 }
