--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   justify-content: center;
   height: 100vh;
   grid-template-columns: 200px 1fr;
-  grid-template-rows: 100px 1fr 65px;
+  grid-template-rows: 100px 1fr 50px;
   grid-template-areas: 
     "menu header"
     "menu main"
@@ -52,11 +52,20 @@ a {
 
 .footer {
   grid-area: footer;
+  display: flex;
   background-color: #f9a6e6;
+  justify-content: center;
 }
 
 .welcome-knitwit {
-  width: 350px;
-  /* align-items: right; */
-  margin: 0 50px;
+  /* flex: 1; */
+  display: flex;
+  align-items: center;
+  font-size:x-large;
+  justify-content: center;
+}
+
+.welcome-knitwit, .cover {
+  /* flex: 1; */
+  justify-content: center;
 }
